updated title in main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Museum</title>
+  <title>Hot Takes</title>
   <link rel="stylesheet" type="text/css" href="./public/css/jass.css">
   <link rel="stylesheet" type="text/css" href="../public/css/style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../public/images/apple-touch-icon.png">
