changes to model index and main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,5 +14,13 @@
 </head>
 {{!-- need to check the path for the favicons and css --}}
 <body> 
+  <nav class="navbar">
+    <ul></ul> 
+  </nav>
+
+  <main>
    {{{body}}} 
+  </main>
+
 </body>
+</html>
