--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,8 +25,18 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
   </head>
+
   {{! need to check the path for the favicons and css }}
   <body>
+    <header>
+    <form id="movie-search" class="" action="/api/movie" method="post">
+      <label class="search-label" for="movie-search">Search Movie</label>
+      <input type="text" name="title" class="" />
+
+      <button type="submit" class="btn">Search</button>
+    </form>
+  </header>
+
     {{{body}}}
   </body>
 </html>
