--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -1,24 +1,33 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
+        <h1>{{title}}</h1>
         <img src="{{poster}}" alt="{{title}}">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <ul>
-            <li>{{title}}</li>
-            <li>{{plot}}</li>
-            <li>{{year}}</li>
+            <li>Plot: {{plot}}</li>
+            <li>Released: {{year}}</li>
             <li>{{Internet.Source}}: {{Internet.Value}}</li>
             <li>{{Rotten.Source}}: {{Rotten.Value}}</li>
             <li>{{Metacritic.Source}}: {{Metacritic.Value}}</li>
         </ul>
     </div>
-    <div class="col-md-12">
+    <div class="col-md-8 form-floating">
      <form  class="" action="/api/review" method="post">
-      <label class="search-label" for="review">HOT RATE</label>
-      <input type="number" id="rating" name="rating" min="1" max="10"/>
-      <label class="search-label" for="review">Add a HotTake</label>
-      <textarea name="take" id="review" cols="30" rows="10"></textarea>
-      <input type="hidden" name="imdbID" value="{{imdbID}}"/>
+      {{!-- <label class="search-label" for="review">HOT RATE</label> --}}
+      {{!-- <input type="number" id="rating" name="rating" min="1" max="10"/> --}}
+      {{!-- <label class="search-label" for="review">Add a HotTake</label> --}}
+      {{!-- <textarea name="take" id="review" cols="30" rows="10"></textarea> --}}
+      {{!-- <input type="hidden" name="imdbID" value="{{imdbID}}"/> --}}
+        <label for="customRange3" class="search-label" for="review">Hot Rate</label>
+        <input type="range" id="rating" name="rating" class="form-range" min="1" max="10" step="0.5" id="customRange3">
+        {{!-- <div class="form-floating"> --}}
+        <textarea class="form-control" name="take" id="review" placeholder="Add a Hot Take" id="floatingTextarea2" style="height: 100px"></textarea>
+        <label class="search-label" for="review"></label>
+        <input type="hidden" name="imdbID" value="{{imdbID}}">
+        {{!-- </div> --}}
+
+
 
       <button type="submit" class="btn">SEND IT</button>
      </form>
