--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hot Takes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./public/css/jass.css" />
+    {{!-- <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> --}}
     <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
     <link
       rel="apple-touch-icon"
@@ -34,12 +34,16 @@
       <nav class="row">
         <div class="col-md-4 search">
           <form id="movie-search" class="" action="/api/movie" method="post">
-            <label class="search-label" for="movie-search">Search a Movie</label>
-            <input type="text" name="title" class="" />
-            <button type="submit" class="btn">Search</button>
+            {{!-- <label class="search-label" for="movie-search">Search a Movie</label> --}}
+            {{!-- <input type="text" name="title" class="" /> --}}
+            {{!-- <button type="submit" class="btn">Search</button> --}}
+            <div class="input-group">
+              <input type="text" name="title" class="form-control"  placeholder="Search a Movie" aria-label="Search a Movie"   aria-describedby="button-addon2">
+              <button class="btn btn-outline-secondary" type="submit"   id="button-addon2">Take me</button>
+            </div>
           </form>
         </div>
-        <div class="col-md-8 nav-bar nav-links">
+        <div class="col-md-4 offset-md-4 nav-bar nav-links">
           <button type="button" class="btn btn-outline-primary">Sign-up</button>
           <button type="button" class="btn btn-outline-primary">Login</button>
         </div>
