added margins to space contents off the left or start side of the page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
 
   {{! need to check the path for the favicons and css }}
   <body>
-    <header>
+    <header class="ms-3">
       <h1>Hot-Takes Movie Reviews</h1>
       <nav class="row">
         <div class="col-md-4 search">
