--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 ms-3">
         <h1>{{title}}</h1>
         <img src="{{poster}}" alt="{{title}}">
     </div>
@@ -12,7 +12,7 @@
             <li>{{Metacritic.Source}}: {{Metacritic.Value}}</li>
         </ul>
     </div>
-    <div class="col-md-8 form-floating">
+    <div class="col-md-8 ms-3 form-floating">
      <form  class="" action="/api/review" method="post">
       {{!-- <label class="search-label" for="review">HOT RATE</label> --}}
       {{!-- <input type="number" id="rating" name="rating" min="1" max="10"/> --}}
