--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -22,9 +22,9 @@
         <label for="customRange3" class="search-label" for="review">Hot Rate</label>
         <input type="range" id="rating" name="rating" class="form-range" min="1" max="10" step="0.5" id="customRange3">
         {{!-- <div class="form-floating"> --}}
-        <textarea class="form-control" name="take" id="review" placeholder="Add a Hot Take" id="floatingTextarea2" style="height: 100px"></textarea>
         <label class="search-label" for="review"></label>
-        <input type="hidden" name="imdbID" value="{{imdbID}}">
+        <textarea class="form-control" name="take" id="review" placeholder="Add a Hot Take" id="floatingTextarea2" style="height: 100px"></textarea>
+        <input type="hidden" name="imdbID" value="{{imdbID}}"/>
         {{!-- </div> --}}
 
 
@@ -32,4 +32,11 @@
       <button type="submit" class="btn">SEND IT</button>
      </form>
     </div>
+    <section>
+        <div class="col-md-8 hot-takes">
+            {{#each reviews as |review|}}
+            {{> review-details}}
+            {{/each}}
+        </div>
+    </section>
 </div>
