--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hot Takes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    {{!-- <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> --}}
-    <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    {{! <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> }}
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -24,7 +29,7 @@
       sizes="16x16"
       href="../public/images/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    {{! <link rel="manifest" href="/site.webmanifest" /> }}
   </head>
 
   {{! need to check the path for the favicons and css }}
@@ -34,24 +39,46 @@
       <nav class="row">
         <div class="col-md-4 search">
           <form id="movie-search" class="" action="/api/movie" method="post">
-            {{!-- <label class="search-label" for="movie-search">Search a Movie</label> --}}
-            {{!-- <input type="text" name="title" class="" /> --}}
-            {{!-- <button type="submit" class="btn">Search</button> --}}
+            {{! <label class="search-label" for="movie-search">Search a Movie</label> }}
+            {{! <input type="text" name="title" class="" /> }}
+            {{! <button type="submit" class="btn">Search</button> }}
             <div class="input-group">
-              <input type="text" name="title" class="form-control"  placeholder="Search a Movie" aria-label="Search a Movie"   aria-describedby="button-addon2">
-              <button class="btn btn-outline-secondary" type="submit"   id="button-addon2">Take me</button>
+              <input
+                type="text"
+                name="title"
+                class="form-control"
+                placeholder="Search a Movie"
+                aria-label="Search a Movie"
+                aria-describedby="button-addon2"
+              />
+              <button
+                class="btn btn-outline-secondary"
+                type="submit"
+                id="button-addon2"
+              >Take me</button>
             </div>
           </form>
         </div>
         <div class="col-md-4 offset-md-4 nav-bar nav-links">
-          <button type="button" class="btn btn-outline-primary">Sign-up</button>
-          <button type="button" class="btn btn-outline-primary">Login</button>
+          {{#if loggedIn}}
+            <button id="logout" class="btn btn-outline-primary">Logout</button>
+          {{else}}
+            <a href="/signup" class="btn btn-outline-primary">Sign-up</a>
+            <a href="/login" class="btn btn-outline-primary">Login</a>
+          {{/if}}
         </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
     {{{body}}}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    {{#if loggedIn}}
+      <script src="./js/logout.js"></script>
+    {{/if}}
   </body>
-  
+
 </html>
