--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,7 +44,7 @@
           </form>
         </div>
         <div class="col-md-4 offset-md-4 nav-bar nav-links">
-          <button type="button" class="btn btn-outline-primary">Sign-up</button>
+          <button type="button" action="/login" class="btn btn-outline-primary">Sign-up</button>
           <button type="button" class="btn btn-outline-primary">Login</button>
         </div>
     </nav>
