--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,3 +2,15 @@
 {{> -details}}
 {{/each}} --}}
 <h1>homepage</h1>
+
+<body>
+    <div class="content row d-flex justify-content-center">
+        <div class="recentFilms col">t</div>
+{{!-- Is writeReview still needed with how current search bar is done? --}}
+        <div class="writeReview col-md-4" ></div>
+        <div class="userReviews col-md-6">v</div>
+        <div class="pastReviews col-md-1">a</div>
+    </div>
+
+
+</body>
