Added sample site description

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,11 +5,11 @@
 
 <body>
     <div class="content row d-flex justify-content-center">
-        <div class="recentFilms col">t</div>
+        <div class="recentFilms col">films</div>
 {{!-- Is writeReview still needed with how current search bar is done? --}}
         <div class="writeReview col-md-4" ></div>
-        <div class="userReviews col-md-6">v</div>
-        <div class="pastReviews col-md-1">a</div>
+        <div class="userReviews col-md-6">other users' reviews here</div>
+        <div class="pastReviews col-md-1">your past reviews here</div>
     </div>
 
 
