--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,7 @@
   <body>
     <header class="ms-3">
       <h1>Hot-Takes Movie Reviews</h1>
+      <p>A movie website for the hot takes of real movie goers, not reviewers! </p>
       <nav class="row">
         <div class="col-md-4 search">
           <form id="movie-search" class="" action="/api/movie" method="post">
