created route that appends previous reviews to movie page with view moviepages and partials

--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -48,4 +48,9 @@
       </form>
     {{/if}}
   </div>
+  <section class="row prev-reviews">
+    {{#each prevReviews as |review|}}
+    {{> review-details}}
+    {{/each}}
+  </section>
 </div>
