added routes and logic to attach user and username to review and show on review also only allows one review per movie

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
       <p>A movie website for the hot takes of real movie goers, not reviewers! </p>
       <nav class="row">
         <div class="col-md-4 search">
-          <form id="movie-search" class="" action="/api/movie" method="post">
+          <form id="movie-search" class="" action="/api/movie" method="get">
             {{! <label class="search-label" for="movie-search">Search a Movie</label> }}
             {{! <input type="text" name="title" class="" /> }}
             {{! <button type="submit" class="btn">Search</button> }}
