--- a/views/partials/review-details.handlebars
+++ b/views/partials/review-details.handlebars
@@ -1,5 +1,5 @@
 <div class="col-md-8 card">
-  <h5 class="card-header">{{dataValues.user_id}}</h5>
+  <h5 class="card-header">{{dataValues.user.dataValues.username}}</h5>
   <div class="card-body">
     <p class="card-text">{{dataValues.take}}</p>
     <a href="#" class="btn btn-primary">Rate Take</a>
