--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -3,7 +3,7 @@
     <h1>{{title}}</h1>
     <img src="{{poster}}" alt="{{title}}" />
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 align-self-center">
     <ul>
       <li>Plot: {{plot}}</li>
       <li>Released: {{year}}</li>
@@ -16,11 +16,6 @@
     {{#if loggedIn}}
     {{#if noReview}}
       <form class="" action="/api/review" method="post">
-        {{! <label class="search-label" for="review">HOT RATE</label> }}
-        {{! <input type="number" id="rating" name="rating" min="1" max="10"/> }}
-        {{! <label class="search-label" for="review">Add a HotTake</label> }}
-        {{! <textarea name="take" id="review" cols="30" rows="10"></textarea> }}
-        {{!-- <input type="hidden" name="imdbID" value="{{imdbID}}"/> --}}
         <label for="customRange3" class="search-label" for="review">Hot Rate</label>
         <input
           type="range"
@@ -32,7 +27,6 @@
           step="0.5"
           id="customRange3"
         />
-        {{! <div class="form-floating"> }}
         <textarea
           class="form-control"
           name="take"
@@ -43,7 +37,6 @@
         ></textarea>
         <label class="search-label" for="review"></label>
         <input type="hidden" name="imdbID" value="{{imdbID}}" />
-        {{! </div> }}
 
         <button type="submit" class="btn">SEND IT</button>
       </form>
