--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     {{! <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> }}
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -131,9 +131,9 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-      <script src="./js/login.js"></script>
-      <script src="./js/logout.js"></script>
-      <script src="./js/signup.js"></script>
+      <script src="/js/login.js"></script>
+      <script src="/js/logout.js"></script>
+      <script src="/js/signup.js"></script>
  
   </body>
 
