--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     {{! <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> }}
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
