--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -1,15 +1,17 @@
 <div class="row">
-  <div class="col-md-4 ms-3">
+  <div class="col-md-3 ms-3">
     <h1>{{title}}</h1>
     <img src="{{poster}}" alt="{{title}}" />
   </div>
-  <div class="col-md-4 align-self-center">
-    <ul>
+  <div class="col-md-5 align-self-center">
+    <ul class="movie-info">
       <li>Plot: {{plot}}</li>
       <li>Released: {{year}}</li>
-      <li>{{Internet.Source}}: {{Internet.Value}}</li>
-      <li>{{Rotten.Source}}: {{Rotten.Value}}</li>
-      <li>{{Metacritic.Source}}: {{Metacritic.Value}}</li>
+    </ul>
+    <ul class="row movie-ratings">
+      <li class="col">IMDB: {{Internet.Value}}</li>
+      <li class="col">{{Rotten.Source}}: {{Rotten.Value}}</li>
+      <li class="col">{{Metacritic.Source}}: {{Metacritic.Value}}</li>
     </ul>
   </div>
   <div class="col-md-8 ms-3 form-floating">
@@ -43,7 +45,10 @@
       {{/if}}
     {{/if}}
   </div>
-  <section class="row prev-reviews">
+  <div>
+    <br>
+  </div>
+  <section class="row ms-3 prev-reviews">
     {{#each prevReviews as |review|}}
     {{> review-details}}
     {{/each}}
