--- a/views/partials/review-details.handlebars
+++ b/views/partials/review-details.handlebars
@@ -1,4 +1,4 @@
-<div class="col-md-8 card">
+<div class="col-md-8 mb-2 card">
   <div class="row card-header">
     <h5 class="col-md-2 rating">Hot Rate: {{dataValues.rating}}</h5>
     <a href="#" class="col-md-2 offset-md-1 btn btn-outline-danger">Heat Up</a>
