commiting before merging route changes

--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -8,7 +8,7 @@
       <li>Plot: {{plot}}</li>
       <li>Released: {{year}}</li>
     </ul>
-    <ul class="row movie-ratings">
+    <ul class="row justify-content-start movie-ratings">
       <li class="col">IMDB: {{Internet.Value}}</li>
       <li class="col">{{Rotten.Source}}: {{Rotten.Value}}</li>
       <li class="col">{{Metacritic.Source}}: {{Metacritic.Value}}</li>
