--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -82,7 +82,7 @@
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Username</label>
-    <input type="password" class="form-control" id="username">
+    <input type="username" class="form-control" id="username">
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
