--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,7 +21,7 @@
     <input type="radio" name="position" />
     <main id="carousel">
       <div class="item"><img
-          src="/public/images/MiloandOtis.jpg"
+          src="/images/MiloandOtis.jpg"
           alt="MiloandOtis"
         /></div>
       <div class="item"></div>
