got animated carousel working with hardcoded movies needs to be resized

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,19 +15,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href='images/apple-touch-icon.png'
+      href="images/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href='images/favicon-32x32.png'
+      href="images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href='images/favicon-16x16.png'
+      href="images/favicon-16x16.png"
     />
     {{! <link rel="manifest" href="/site.webmanifest" /> }}
   </head>
@@ -36,7 +36,8 @@
   <body>
     <header class="ms-3">
       <h1>Hot-Takes Movie Reviews</h1>
-      <p>A movie website for the hot takes of real movie goers, not reviewers! </p>
+      <p>A movie website for the hot takes of real movie goers, not reviewers!
+      </p>
       <nav class="row">
         <div class="col-md-4 search">
           <form id="movie-search" class="" action="/api/movie" method="get">
@@ -64,61 +65,140 @@
           {{#if loggedIn}}
             <button id="logout" class="btn btn-outline-primary">Logout</button>
           {{else}}
-            {{!-- <a href="/signup" class="btn btn-outline-primary">Sign-up</a> --}}
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Signup</button>
-              <div class="modal fade" id="signUpModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Signup</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form id="signUpForm">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="signUpInputEmail" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Username</label>
-    <input type="username" class="form-control" id="username">
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="signUpInputPassword">
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-      </div>
-    </div>
-  </div>
-</div>   
-            {{!-- <a href="/login" class="btn btn-outline-primary">Login</a> --}}
-            <button href="/login" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-                          <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Login</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form id="loginForm">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="loginInputEmail" aria-describedby="emailHelp">
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="loginInputPassword">
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-      </div>
-    </div>
-  </div>
-</div>
+            {{! <a href="/signup" class="btn btn-outline-primary">Sign-up</a> }}
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#signUpModal"
+            >Signup</button>
+            <div
+              class="modal fade"
+              id="signUpModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1
+                      class="modal-title fs-5"
+                      id="exampleModalLabel"
+                    >Signup</h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <form id="signUpForm">
+                      <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email
+                          address</label>
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="signUpInputEmail"
+                          aria-describedby="emailHelp"
+                        />
+                        <div id="emailHelp" class="form-text">We'll never share
+                          your email with anyone else.</div>
+                      </div>
+                      <div class="mb-3">
+                        <label
+                          for="exampleInputPassword1"
+                          class="form-label"
+                        >Username</label>
+                        <input
+                          type="username"
+                          class="form-control"
+                          id="username"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <label
+                          for="exampleInputPassword1"
+                          class="form-label"
+                        >Password</label>
+                        <input
+                          type="password"
+                          class="form-control"
+                          id="signUpInputPassword"
+                        />
+                      </div>
+                      <button
+                        type="submit"
+                        class="btn btn-primary"
+                      >Submit</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {{! <a href="/login" class="btn btn-outline-primary">Login</a> }}
+            <button
+              href="/login"
+              type="button"
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#loginModal"
+            >Login</button>
+            <div
+              class="modal fade"
+              id="loginModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1
+                      class="modal-title fs-5"
+                      id="exampleModalLabel"
+                    >Login</h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <form id="loginForm">
+                      <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email
+                          address</label>
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="loginInputEmail"
+                          aria-describedby="emailHelp"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <label
+                          for="exampleInputPassword1"
+                          class="form-label"
+                        >Password</label>
+                        <input
+                          type="password"
+                          class="form-control"
+                          id="loginInputPassword"
+                        />
+                      </div>
+                      <button
+                        type="submit"
+                        class="btn btn-primary"
+                      >Submit</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
 
           {{/if}}
         </div>
@@ -132,15 +212,21 @@
       crossorigin="anonymous"
     ></script>
     <script
-  src="https://code.jquery.com/jquery-3.7.0.min.js"
-  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-  crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-      <script src="/js/login.js"></script>
-      <script src="/js/logout.js"></script>
-      <script src="/js/signup.js"></script>
-      <script src="/js/vote.js"></script>
- 
+      src="https://code.jquery.com/jquery-3.7.0.min.js"
+      integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"
+      integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="/js/login.js"></script>
+    <script src="/js/logout.js"></script>
+    <script src="/js/signup.js"></script>
+    <script src="/js/vote.js"></script>
+
   </body>
 
 </html>
