--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,33 +1,14 @@
-{{!-- {{#each  as ||}}
-{{> -details}}
-{{/each}} --}}
-<h1>homepage</h1>
-
 <body>
-  <div class="content row d-flex justify-content-center">
-    <div class="recentFilms col">films</div>
-    {{! Is writeReview still needed with how current search bar is done? }}
-    <div class="writeReview col-md-4"></div>
-    <div class="userReviews col-md-6">other users' reviews here</div>
-    <div class="pastReviews col-md-1">your past reviews here</div>
-  </div>
-
   {{! Film Carousel }}
-  <div class="film_carouel">
-    <input type="radio" name="position" checked />
-    <input type="radio" name="position" />
-    <input type="radio" name="position" />
-    <input type="radio" name="position" />
-    <input type="radio" name="position" />
-    <main id="carousel">
-      <div class="item"><img
-          src="/images/MiloandOtis.jpg"
-          alt="MiloandOtis"
-        /></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-    </main>
+  <div class="container">
+    <div class="carousel">
+      {{#each movieInfo as |movie|}}
+        <div class="carousel__face">
+          <a href="/api/movie?imdbID={{movie.imdbID}}">
+            <img src="{{movie.poster}}" alt="{{movie.title}}" />
+          </a>
+        </div>
+      {{/each}}
+    </div>
   </div>
 </body>
