--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,24 +12,7 @@
     />
     {{! <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> }}
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="images/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="images/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="images/favicon-16x16.png"
-    />
-    {{! <link rel="manifest" href="/site.webmanifest" /> }}
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
