updated css for buttons and font for buttons

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,12 +29,15 @@
       sizes="16x16"
       href="images/favicon-16x16.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     {{! <link rel="manifest" href="/site.webmanifest" /> }}
   </head>
 
   {{! need to check the path for the favicons and css }}
   <body>
-    <header class="ms-3">
+    <header class="ms-3 row">
       <h1>Hot-Takes Movie Reviews</h1>
       <p>A movie website for the hot takes of real movie goers, not reviewers!
       </p>
