--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,6 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    {{! <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> }}
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,12 +18,11 @@
       href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Nanum+Gothic&display=swap"
       rel="stylesheet"
     />
-    <link rel="manifest" href="images/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
-
   <body>
     <header class="ms-3">
-      <h1 id="main-head">Hot-Takes Movie Reviews</h1>
+      <h1 id="main-head"><a href="/">Hot-Takes Movie Reviews</h1></a>
       <p>A movie website for the hot takes of real movie goers, not reviewers!
       </p>
       <nav class="row">
