deleted underline on title

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="ms-3">
-      <h1 id="main-head"><a href="/">Hot-Takes Movie Reviews</h1></a>
+      <h1 id="main-head"><a style="text-decoration:none"href="/">Hot-Takes Movie Reviews</h1></a>
       <p>A movie website for the hot takes of real movie goers, not reviewers!
       </p>
       <nav class="row">
