styling changes route clean up need to add values to review votes

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,7 @@
 <body>
   {{! Film Carousel }}
-  <div class="container">
+  {{!-- need to fix this container class for sizing the carousel --}}
+  <div class=".container-md container-fluid">
     <div class="carousel">
       {{#each movieInfo as |movie|}}
         <div class="carousel__face">
