--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,11 @@ body {
   font: var(--lightest);
 }
 
+.signup-btn {
+  background-color: var(--accent);
+  font: var(--light);
+}
+
 #logout {
   background-color: var(--accent);
   font: var(--light);
@@ -33,13 +38,29 @@ ul {
 
 /* Movie Page Styling */
 #title {
-  font: var(--lightest);
+  color: var(--lightest);
   font-size: 40px;
   font-weight: bolder;
 }
 
 .movie-info {
-  font: var(--lightest);
+  color: var(--lightest);
+}
+
+.review-input {
+  background-color: var(--lightest);
+}
+
+/* Previous review styling */
+.review-card {
+  background-color: var(--dark);
+  box-shadow: 10px 5px 5px var(--light);
+  border: var(--darkest);
+  border-style: solid;
+}
+
+.card-text {
+  color: var(--lightest);
 }
 
 /* Carosel styling */
@@ -70,7 +91,6 @@ ul {
 }
 
 .carousel__face:nth-child(1) {
-  height: 70%;
   transform: rotateY(0deg) translateZ(430px);
 }
 .carousel__face:nth-child(2) {
