--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,6 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    {{! <link rel="stylesheet" type="text/css" href="./public/css/jass.css" /> }}
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link
       rel="apple-touch-icon"
@@ -67,14 +66,14 @@
             </div>
           </form>
         </div>
-        <div class="col-md-4 offset-md-4 nav-bar nav-links">
+        <div class="col-md-2 offset-md-6 nav-bar nav-links">
           {{#if loggedIn}}
             <button id="logout" class="btn btn-outline-danger">Logout</button>
           {{else}}
             {{! <a href="/signup" class="btn btn-outline-primary">Sign-up</a> }}
             <button
               type="button"
-              class="btn btn-primary"
+              class="signup-btn btn btn-outline-danger"
               data-bs-toggle="modal"
               data-bs-target="#signUpModal"
             >Signup</button>
