changed cool down button color animation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,6 +116,8 @@ ul {
   color: #fff;
 }
 
+
+
 .btn:link,
 .btn:visited {
     text-transform: uppercase;
@@ -126,6 +128,10 @@ ul {
     transition: all .2s;
     position: absolute;
     
+}
+
+#coolDownBtn:hover {
+  background-color: blue;
 }
 
 .btn:hover {
