--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,8 @@ ul {
 .movie-info {
   color: var(--lightest);
 }
+/* Leave a review styling */
+
 
 .review-input {
   background-color: var(--lightest);
@@ -59,6 +61,10 @@ ul {
   box-shadow: 10px 5px 5px var(--light);
   border: var(--darkest);
   border-style: solid;
+}
+
+.vote-count {
+  text-align: center;
 }
 
 .card-text {
