added avg functionality

--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -9,6 +9,7 @@
         <li><b>Plot:</b> {{plot}}</li>
     </ul>
     <ul class="row justify-content-start movie-ratings">
+      <li class="col ext-rating">HotTake's Rate: {{hotTakesAvg}}/10</li>
       <li class="col ext-rating">IMDB: {{Internet.Value}}</li>
       <li class="col ext-rating">{{Rotten.Source}}: {{Rotten.Value}}</li>
       <li class="col ext-rating">{{Metacritic.Source}}: {{Metacritic.Value}}</li>
