--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,9 @@
   </head>
   <body>
     <header class="ms-3">
+      
       <h1 id="main-head"><a style="text-decoration:none"href="/">Hot-Takes Movie Reviews</h1></a>
+      
       <p>A movie website for the hot takes of real movie goers, not reviewers!
       </p>
       <nav class="row">
@@ -44,7 +46,7 @@
                 class="btn take-me-btn btn-outline-warning"
                 type="submit"
                 id="button-addon2"
-              >Take me</button>
+              >Take me</button><img src="/images/ezgif.gif"height="55" width="55" alt="flaming clap-board">
             </div>
           </form>
         </div>
