--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <body>
   {{! Film Carousel }}
   {{!-- need to fix this container class for sizing the carousel --}}
-  <div class=".container-md container-fluid">
+  <div class="container">
     <div class="carousel">
       {{#each movieInfo as |movie|}}
         <div class="carousel__face">
@@ -13,3 +13,5 @@
     </div>
   </div>
 </body>
+
+
