--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -18,8 +18,9 @@
     {{#if loggedIn}}
     {{#if noReview}}
       <form class="" name="review" action="/api/review" method="post">
-        
-        <label for="customRange3" class="search-label" for="review">Hot Rate</label>
+        <label for="rating" class="control-label">Heat Rating</label>
+        <input id="rating" name="rating" class="rating rating-loading" data-show-clear="false" data-show-caption="true">
+        {{!-- <label for="customRange3" class="search-label" for="review">Hot Rate</label>
         <input
           type="range"
           id="rating"
@@ -29,7 +30,7 @@
           max="10"
           step="0.5"
           id="customRange3"
-        />
+        /> --}}
         <textarea
           class="form-control review-input"
           name="take"
