--- a/views/partials/review-details.handlebars
+++ b/views/partials/review-details.handlebars
@@ -2,7 +2,9 @@
   <div class="row card-header justify-content-between">
     <h5 class="col-md-2 rating">Hot Rate: {{rating}}</h5>
     <p class="col-md-1 mx-0 px-0 vote-count">{{upVote}}</p>
+    {{!-- <button value="{{id}}" class=" col-md-2 btn heatUp"><i class="fa-sharp fa-light fa-fire-flame fa-beat fa-2xs" style="color: #e09f3e;"></i></button> --}}
     <button value="{{id}}" class="col-md-2 btn btn-outline-danger heatUp">Heat Up</button>
+
     <button value="{{id}}" class="col-md-2 btn btn-outline-primary coolDown">Cool Down</button>
     <p class="col-md-1 vote-count">{{downVote}}</p>
     <h5 class="col-md-2 username">{{user.username}}</h5>
