--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
   <body>
     <header class="ms-3">
       
-      <h1 id="main-head"><a style="text-decoration:none"href="/">Hot-Takes Movie Reviews</h1></a>
+      <h1 id="main-head"><a style="text-decoration:none"href="/">Hot-Takes Movie Reviews<img src="/images/ezgif.gif"height="100" width="100" alt="flaming clap-board"></h1></a>
       
       <p>A movie website for the hot takes of real movie goers, not reviewers!
       </p>
@@ -62,7 +62,7 @@
                 class="btn take-me-btn btn-outline-warning"
                 type="submit"
                 id="button-addon2"
-              >Take me</button><img src="/images/ezgif.gif"height="55" width="55" alt="flaming clap-board">
+              >Take me</button>
             </div>
           </form>
         </div>
