fixed cool down button color

--- a/views/partials/review-details.handlebars
+++ b/views/partials/review-details.handlebars
@@ -8,6 +8,7 @@
       <i class="fa-solid fa-fire"></i></button>
 
     <button
+      id="coolDownBtn"
       value="{{id}}"
       class="col-md-2 btn btn-outline-primary coolDown"
     >Cool Down <i class="fa-solid fa-icicles"></i></button>
