--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,7 @@
 <body>
+  <div class="row text-center justify-content-center">
+  <h3 class="col-md-12 description">A movie website for the hot takes of real movie goers, by real movie goers!</h3>
+  </div>
   {{! Film Carousel }}
   {{!-- need to fix this container class for sizing the carousel --}}
   <div class="container">
