--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,10 +39,9 @@
   <body>
     <header class="ms-3">
       
-      <h1 id="main-head"><a style="text-decoration:none"href="/">Hot-Takes Movie Reviews<img src="/images/ezgif.gif"height="100" width="100" alt="flaming clap-board"></h1></a>
+      <h1 id="main-head"><a style="text-decoration:none"href="/"><img src="/images/ezgif.gif"height="100" width="100" alt="flaming clap-board">Hot-Takes Movie Reviews</h1></a>
       
-      <p>A movie website for the hot takes of real movie goers, not reviewers!
-      </p>
+      {{!-- <p>A movie website for the hot takes of real movie goers, not reviewers!</p> --}}
       <nav class="row">
         <div class="col-md-4 search">
           <form id="movie-search" class="" action="/api/movie" method="get">
