--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -2,18 +2,20 @@
 <div class="row">
   <div class="col-md-3 ms-3">
     <h1 id="title">{{title}}</h1>
+    <h5 class="hot-rating"><b>Hot Rate:</b> {{hotTakesAvg}}/10</h5>
     <img src="{{poster}}" alt="{{title}}" />
   </div>
   <div class="col-md-5 align-self-center movie-info">
+    <div>
+    </div>
     <ul>
         <li><b>Released:</b> {{year}}</li>
         <li><b>Plot:</b> {{plot}}</li>
     </ul>
     <ul class="row justify-content-start movie-ratings">
-      <li class="col ext-rating">HotTake's Rate: {{hotTakesAvg}}/10</li>
-      <li class="col ext-rating">IMDB: {{Internet.Value}}</li>
-      <li class="col ext-rating">{{Rotten.Source}}: {{Rotten.Value}}</li>
-      <li class="col ext-rating">{{Metacritic.Source}}: {{Metacritic.Value}}</li>
+      <li class="col ext-rating"><b>IMDB:</b> {{Internet.Value}}</li>
+      <li class="col ext-rating"><b>{{Rotten.Source}}:</b> {{Rotten.Value}}</li>
+      <li class="col ext-rating"><b>{{Metacritic.Source}}:</b> {{Metacritic.Value}}</li>
     </ul>
   </div>
   <div class="col-md-8 ms-3 form-floating">
@@ -22,17 +24,6 @@
       <form class="" name="review" action="/api/review" method="post">
         <label for="rating" class="control-label">Heat Rating</label>
         <input id="rating" name="rating" class="rating rating-loading" data-show-clear="false" data-show-caption="true" data-min="0" data-max="10" data-step="1">
-        {{!-- <label for="customRange3" class="search-label" for="review">Hot Rate</label>
-        <input
-          type="range"
-          id="rating"
-          name="rating"
-          class="form-range"
-          min="1"
-          max="10"
-          step="0.5"
-          id="customRange3"
-        /> --}}
         <textarea
           class="form-control review-input"
           name="take"
